--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,17 @@
+APScheduler==3.6.3
 asgiref==3.4.1
+cachetools==4.2.2
+certifi==2021.10.8
 Django==3.2.5
 gunicorn==20.1.0
 Pillow==8.3.0
+python-dotenv==0.18.0
+python-telegram-bot==13.8.1
 pytz==2021.1
+pytz-deprecation-shim==0.1.0.post0
+six==1.16.0
 sorl-thumbnail==12.7.0
 sqlparse==0.4.1
+tornado==6.1
+tzdata==2021.5
+tzlocal==4.1
